@@ -38,7 +38,7 @@ void gen_gres(char *name, char **BPtr, int *BSpace);
 void gen_gen(char *name, char **BPtr, int *BSpace);
 
 #if defined(NVIDIA_GPUS) && defined(NVML_API)
-void log_nvml_error(nvmlReturn_t rc, char* gpuid, char* id);
+void log_nvml_error(nvmlReturn_t rc, char* gpuid, const char* id);
 
 int init_nvidia_nvml();
 
